# napalm_project

./: __init__.py  configure_devices_nornir_napalm.py  pyproject.toml
intended_config/: config.txt
j2_vars/: ios.yml
nornir_files/: config.yml  groups.yml
templates/: full_config.j2  loopback_template.j2
