[tool.poetry]
name = "test-device-connectivity"
version = "0.1.0"
description = ""
authors = ["Carlos Huaccho"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
netmiko = "^4.3.0"
napalm = "^5.0.0"
napalm-stubs = "*"
requests = "^2.32.3"
jinja2 = "^3.1.4"
nornir = "^3.4.1"
nornir-napalm = "^0.5.0"
pyyaml = "^6.0.1"
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
